--- a/public/splash.html
+++ b/public/splash.html
@@ -20,11 +20,8 @@
 <script>
   (function () {
     var versiondiv = document.getElementById('version');
-    var pack = require('../package.json');
-    var path  = require('path');
-    // var envPath = path.join(__dirname, '../../.env');
-    // require('dotenv').config({path: envPath});
-    versiondiv.innerHTML = "Version " + pack.version + ' (' + process.env.BUILD + ')';
+    var version = 'electronite';
+    versiondiv.innerHTML = "Version " + version + ' (' + process.env.BUILD + ')';
   })();
 </script>
 </body>
