Fixed font loading for builds

--- a/public/splash.html
+++ b/public/splash.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <html>
 <head>
+  <title>translationCore</title>
   <meta charset="utf-8">
- <link rel="stylesheet" type="text/css" href="./styles.css">
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
 <div style="height: 100%; width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center">
